Correccion titulo, justificación y scroll up

--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
         </div>
 
         <section id="imageDayId" class="imageDay">
-            <h2>PICITURE OF THE DAY - <span id="fecha"></span></h2>
+            <h2>PICTURE OF THE DAY - <span id="fecha"></span></h2>
             <div class="imgexp">
                 <figure class="imgcontainer">
                     <img id="mainImg" alt="Espacio">
