Last days ahora permite hacer click sobre la foto y ver el detalle. También se permite moverse a partir de ese fecha

--- a/index.htm
+++ b/index.htm
@@ -41,47 +41,11 @@
     
         <section id="lastDaysId" class="lastDays">
             <h2>LAST DAYS</h2>
-            <div class="lastDaysImg">
-                <figure>
+            <div class="lastDaysImg" id="lastDaysImgs">
+                <!-- <figure>
                     <figcaption id="fig0"></figcaption>
                     <img id="img0" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig1"></figcaption>
-                    <img id="img1" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig2"></figcaption>
-                    <img id="img2" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig3"></figcaption>
-                    <img id="img3" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig4"></figcaption>
-                    <img id="img4" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig5"></figcaption>
-                    <img id="img5" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig6"></figcaption>
-                    <img id="img6" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig7"></figcaption>
-                    <img id="img7" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig8"></figcaption>
-                    <img id="img8" alt="Espacio">
-                </figure>
-                <figure>
-                    <figcaption id="fig9"></figcaption>
-                    <img id="img9" alt="Espacio">
-                </figure>
+                </figure> -->
             </div>
 
         </section>
